Fix sidenav icon spacing so material and fa icons align

--- a/src/main.css
+++ b/src/main.css
@@ -5,6 +5,10 @@ md-sidenav.md-closed.md-locked-open-add-active {
 	width: 200px !important;
 	max-width: 200px !important;
 }
+md-sidenav ng-md-icon {
+    width: 30px;
+    padding-left: 6px;
+}
 
 md-toast .md-toast-content {
 	height: auto;
